src/objects/Staffing_Request__c.object
<CustomObject>
    <fields>
        <fullName>Hiring_Stage__c</fullName>
        <label>Hiring Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hiring Need Validation</fullName>
                    <default>true</default>
                    <label>Hiring Need Validation</label>
                </value>
                <value>
                    <fullName>Request Personnel Action</fullName>
                </value>
                <value>
                    <fullName>Complete Assessment Package</fullName>
                </value>
                <value>
                    <fullName>Announcement Open</fullName>
                </value>
                <value>
                    <fullName>Announcement Close</fullName>
                </value>
                <value>
                    <fullName>Certificate Issue</fullName>
                </value>
                <value>
                    <fullName>Certificate Review Returned</fullName>
                </value>
                <value>
                    <fullName>Send Tentative Offer</fullName>
                </value>
                <value>
                    <fullName>Tentative Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>Initiate Background Investigation</fullName>
                </value>
                <value>
                    <fullName>Send Formal Offer</fullName>
                </value>
                <value>
                    <fullName>New Hire Actual Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hiring_Validation_to_Personnel_Action_Da__c</fullName>
        <description>Number of days between the Hiring Need Validated Date through the Request Personnel Action Date</description>
        <formula>IF(IF(Request_Personnel_Action__c -  Hiring_Need_Validated_Date__c &lt; 0, NULL, Request_Personnel_Action__c - Hiring_Need_Validated_Date__c )&gt;999,NULL,IF(Request_Personnel_Action__c -  Hiring_Need_Validated_Date__c &lt; 0, NULL, Request_Personnel_Action__c - Hiring_Need_Validated_Date__c ))</formula>
        <label># Days Hire Valid to Personnel Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hiring_Validation_to_Tentative_Accepted__c</fullName>
        <description>Days between the Hiring Need Validated Date through the Tentative Offer Accepted Date. Zero if negative or missing dates.</description>
        <formula>IF(IF (Tentative_Offer_Accepted__c - Hiring_Need_Validated_Date__c &lt;0,NULL,Tentative_Offer_Accepted__c - Hiring_Need_Validated_Date__c)&gt;999,NULL,IF (Tentative_Offer_Accepted__c - Hiring_Need_Validated_Date__c &lt;0,NULL,Tentative_Offer_Accepted__c - Hiring_Need_Validated_Date__c))</formula>
        <label># Days Hire Valid to Tentative Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiate_Background_Investigation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initiate Background Investigation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_VA_to_VHA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal VA to VHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_VHA_Same_Station__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal VHA Same Station</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_VHA_Station_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal VHA Station Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigation_to_Formal_Offer__c</fullName>
        <formula>IF(IF( Send_Formal_Offer_Date__c - Initiate_Background_Investigation_Date__c &lt;0,NULL,Send_Formal_Offer_Date__c - Initiate_Background_Investigation_Date__c)&gt;999,NULL,IF( Send_Formal_Offer_Date__c - Initiate_Background_Investigation_Date__c &lt;0,NULL,Send_Formal_Offer_Date__c - Initiate_Background_Investigation_Date__c))</formula>
        <label># Days Invest to Formal Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Assigned_Specialist_Current_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Assigned Specialist Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JOA_Open_Days__c</fullName>
        <description>Number of days between the JOA Open and the JOA Closed Dates. Zero if negative or missing dates.</description>
        <formula>IF(IF( Announcement_Close_Date__c - Announcement_Open_Date__c &lt;0,NULL,Announcement_Close_Date__c - Announcement_Open_Date__c)&gt; 999, NULL, IF( Announcement_Close_Date__c - Announcement_Open_Date__c &lt;0,NULL,Announcement_Close_Date__c - Announcement_Open_Date__c))</formula>
        <label># Days JOA Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <formula>Position_Number__r.Location_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <formula>Position_Number__r.Location_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Selection_Days__c</fullName>
        <description>Number of days between the Cert Issued Date and the Cert Returned Date. Zero if negative or missing dates.</description>
        <formula>IF(IF( Certificate_Review_Return_Date__c - Certificate_Issue_Date__c &lt;0,NULL,Certificate_Review_Return_Date__c - Certificate_Issue_Date__c)&gt;999,NULL,IF( Certificate_Review_Return_Date__c - Certificate_Issue_Date__c &lt;0,NULL,Certificate_Review_Return_Date__c - Certificate_Issue_Date__c))</formula>
        <label># Days Management Selection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Met_Goal_Percent__c</fullName>
        <formula>IF(ISNULL(New_Hire_Actual_Start__c), null, IF(ISNULL(T2H_Status__c), null, if(T2H_Status__c=&quot;T2H Met&quot;,1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Met Goal Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Min_JOA_Review_Returned_Date__c</fullName>
        <description>The earliest date the announcement review was returned/completed by the Reviewer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Min JOA Review Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Min_JOA_Review_Sent_Date__c</fullName>
        <description>The earliest date the announcement review was sent to the Reviewer(s).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Min JOA Review Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mission_Critical_COVID_19__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mission Critical COVID-19</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Hire_Actual_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Actual Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Hire_Appointing_Authority__c</fullName>
        <description>Source: USA Staffing
Description: The name provided for a New Hire Tag that indicates the New Hire Appointing Authority.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Appointing Authority</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Certificate_Number__c</fullName>
        <description>Source: USA Staffing
Description: The identifying number of the certificate that the new hire was selected from.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Certificate Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Creation_Date__c</fullName>
        <description>The date the New Hire record was created within USA Staffing.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Hire_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Full_Name__c</fullName>
        <formula>IF(ISNULL(New_Hire_First_Name__c), NULL, New_Hire_First_Name__c &amp;&quot; &quot;&amp; New_Hire_Last_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Hire Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Middle_Name__c</fullName>
        <description>Source: USA Staffing
Description: Middle name, or initial, by which a new hire is known or designated on all official transactions.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Number__c</fullName>
        <description>Source: USA Staffing
Description: The unique identifying number associated with each new hire.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Position_Description_Number__c</fullName>
        <description>Source: USA Staffing
Description: The Position Description Number associated to the audited certificate on which a new hire is selected.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Position Description Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_ProjectedStart__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Projected Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Hire_Status__c</fullName>
        <description>Source: USA Staffing
Description: The new hire&apos;s record status (e.g. Active, Cancelled)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Tag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Veterans_Preference_Status__c</fullName>
        <description>Source: USA Staffing
Description: The category of entitlement to preference at time of appointment in the Federal service based on active military service that terminated honorably the new hire is eligible for.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Hire Veterans Preference Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupational_Series_V2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Occupational Series</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupational_Series__c</fullName>
        <formula>Position_Number__r.Occ_Series__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occupational Series Old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Official_Position_Title2__c</fullName>
        <formula>Position_Number__r.Official_Position_Title__c</formula>
        <label>Official Position Title2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Official_Position_Title_V2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Official Position Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Official_Position_Title__c</fullName>
        <formula>Position_Number__r.Official_Position_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Official Position Title Old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding_Process_Owner_Email__c</fullName>
        <description>The email address of the user responsible for the onboarding process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Onboarding Process Owner Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Process Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staffing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Appointment_Types__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Appointment Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POID__c</fullName>
        <formula>Position_Number__r.POID__c</formula>
        <label>POID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Assigned_Organization__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pay Plan</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Appointment_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permanent Appointment Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Populated_Position_Number__c</fullName>
        <formula>NOT(ISBLANK(Position_Number__c))</formula>
        <label>Populated Position Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the HRSmart position number associated with this request to see all position details. Position number can be searched by entering position number, vice, POID, station number, or position title.</inlineHelpText>
        <label>Position Number</label>
        <referenceTo>Position_Number__c</referenceTo>
        <relationshipLabel>Staffing Requests</relationshipLabel>
        <relationshipName>Staffing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Title_Type__c</fullName>
        <description>Identifies the position as T5, T38, or HT38 based on the occupational series. Series which contain multiple position types will default to the position type which typically contains the most employees.</description>
        <label>Position Title Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T5</fullName>
                    <default>true</default>
                    <label>T5</label>
                </value>
                <value>
                    <fullName>T38</fullName>
                </value>
                <value>
                    <fullName>HT38</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prolonged_Start_Date_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prolonged Start Date Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPA_to_Complete_Assessment__c</fullName>
        <description>Number of days between the Request Personnel Action Date through the Complete Assessment Package Date.</description>
        <formula>IF(IF( Complete_Assessment_Package__c - Request_Personnel_Action__c &lt; 0, NULL, Complete_Assessment_Package__c - Request_Personnel_Action__c)&gt;999,NULL,IF( Complete_Assessment_Package__c - Request_Personnel_Action__c &lt; 0, NULL, Complete_Assessment_Package__c - Request_Personnel_Action__c))</formula>
        <label># Days RPA to Complete Assessment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Approval_Date__c</fullName>
        <description>The date/time that a request associated with a new hire was approved.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Approver_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Approver Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Approver_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Approver Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Bargaining_Unit_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Bargaining Unit Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Cancel_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Creation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Pay_Plan_Series_Grade__c</fullName>
        <description>The concatenated pay plan, series, and grade(s) associated with a request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Pay Plan-Series-Grade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Personnel_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Personnel Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Reviewer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Reviewer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Source__c</fullName>
        <description>Identifies whether the request comes through an interface or through manual entry.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Submission_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requester Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requester Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Formal_Offer_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Send Formal Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Tentative_Offer_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Send Tentative Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Senior_Hiring_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Senior Hiring Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series_Title_Group__c</fullName>
        <formula>Occupational_Series_V2__c &amp; &quot; - &quot;&amp; Official_Position_Title_V2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Series &amp; Title Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staffing_Customer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Staffing Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staffing_Office__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Staffing Office Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staffing_Specialist_USAS_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Staffing Specialist USAS Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staffing_Team__c</fullName>
        <description>Editable field so users can enter custom data related to teams.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Staffing Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <formula>Position_Number__r.Station__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2HDaysSinceValidation__c</fullName>
        <formula>IF(ISNULL(Hiring_Need_Validated_Date__c),Null, IF(ISNULL(New_Hire_Actual_Start__c ), TODAY() - Hiring_Need_Validated_Date__c, Days_T2H__c ))</formula>
        <label>* T2H Days Since Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T2H_Day_Variance__c</fullName>
        <formula>New_Hire_Actual_Start__c    -  Hiring_Need_Validated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T2H Day Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T2H_DaysSinceValidation__c</fullName>
        <formula>IF( IF(ISNULL(New_Hire_Actual_Start__c ), TODAY() -  Hiring_Need_Validated_Date__c,  Days_T2H__c ) &lt;0, null, IF(ISNULL(New_Hire_Actual_Start__c ), TODAY() -  Hiring_Need_Validated_Date__c,  Days_T2H__c ) )</formula>
        <label># T2H Days Since Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T2H_Fiscal_Quarter__c</fullName>
        <formula>IF(ISNULL(New_Hire_Actual_Start__c), null, CASE(MONTH(New_Hire_Actual_Start__c), 
1, &quot;Q2&quot; , 
2, &quot;Q2&quot;, 
3, &quot;Q2&quot;, 
4, &quot;Q3&quot;, 
5, &quot;Q3&quot;, 
6, &quot;Q3&quot;, 
7, &quot;Q4&quot;, 
8, &quot;Q4&quot;, 
9, &quot;Q4&quot;, 
10, &quot;Q1&quot;, 
11, &quot;Q1&quot;, 
12, &quot;Q1&quot;, 
&quot;None&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T2H Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2H_Fiscal_Year_Quarter__c</fullName>
        <description>Fiscal year and Fiscal Quarter based on the New Hire Actual Start Date the onboard is reflected for T2H.</description>
        <formula>IF(ISNULL(New_Hire_Actual_Start__c), null,(T2H_Fiscal_Year__c) &amp; &quot; - &quot;&amp; (T2H_Fiscal_Quarter__c))</formula>
        <label>T2H Fiscal Year &amp; Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2H_Fiscal_Year__c</fullName>
        <description>The fiscal year of the New Hire Actual Start Date on which this onboard will be counted for T2H.</description>
        <formula>IF(ISNULL(New_Hire_Actual_Start__c), null, &quot;FY&quot;&amp;Text(YEAR(New_Hire_Actual_Start__c)+1-IF(MONTH(New_Hire_Actual_Start__c)&lt;10,1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T2H Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2H_Month__c</fullName>
        <formula>IF(ISNULL(New_Hire_Actual_Start__c), null, CASE(MONTH(New_Hire_Actual_Start__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T2H Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2H_Status__c</fullName>
        <formula>IF(ISBLANK(New_Hire_Actual_Start__c),&quot;Pending&quot;, IF(ISBLANK(Days_T2H__c),&quot;Pending&quot;,
IF((Time_to_Hire_Goal__c) &gt;= (Days_T2H__c), &quot;T2H Met&quot;, &quot;T2H Not Met&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T2H Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Grade__c</fullName>
        <formula>Position_Number__r.Target_Grade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temporary_Appointment_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary Appointment Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tentative_Offer_Accepted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tentative Offer Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tentative_Offer_Days__c</fullName>
        <description>Days between the Certificate Review Return Date through the Send Tentative Offer Date. Zero if negative or missing dates.</description>
        <formula>IF(IF( Send_Tentative_Offer_Date__c - Certificate_Review_Return_Date__c &lt;0,NULL,Send_Tentative_Offer_Date__c - Certificate_Review_Return_Date__c)&gt;999,NULL,IF( Send_Tentative_Offer_Date__c - Certificate_Review_Return_Date__c &lt;0,NULL,Send_Tentative_Offer_Date__c - Certificate_Review_Return_Date__c))</formula>
        <label># Days Tentative Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tentative_Offer_to_Receive_Tentative_Off__c</fullName>
        <formula>IF(IF( Initiate_Background_Investigation_Date__c - Send_Tentative_Offer_Date__c &lt;0,NULL,Initiate_Background_Investigation_Date__c - Send_Tentative_Offer_Date__c)&gt;999,NULL,IF( Initiate_Background_Investigation_Date__c - Send_Tentative_Offer_Date__c &lt;0,NULL,Initiate_Background_Investigation_Date__c - Send_Tentative_Offer_Date__c))</formula>
        <label># Days Tent Offer Sent  to Investigation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Appointment_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Term Appointment Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Three_Day_Onboarding_Status__c</fullName>
        <formula>IF(ISNULL(New_Hire_Actual_Start__c), &quot;Pending&quot;, If(Days_Onboarding_Time__c &lt;=3,&quot;Met&quot;,&quot;Not Met&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3-Day Onboarding Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Hire_Days__c</fullName>
        <label>Time to Hire Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Hire_Goal__c</fullName>
        <label>Time to Hire Goal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Code__c</fullName>
        <formula>Position_Number__r.Off_Ttl_Cd__c</formula>
        <label>Title Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USAS_Last_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>USAS Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USAS_MSS_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>USAS MSS Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USAS_Onboarding_Process_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>USAS Onboarding Process Owner</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USAS_Request_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Enter the USA Staffing Request Number associated with this request.  Ensure the Request Number is exactly as shown in USA Staffing (highlighting and copying the Request Number from USA Staffing and pasting in this field is a best practice).</inlineHelpText>
        <label>USAS Request Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VISN_Org__c</fullName>
        <description>VISN or VA Organization such as VHA HROO</description>
        <formula>if(CONTAINS(Staffing_Office__c,&quot;Corp Senior&quot;),&quot;VACO CSEMO&quot;, if(CONTAINS(Region__c,&quot;VISN&quot;), Region__c, if(CONTAINS(Region__c, &quot;VACO&quot;), Region__c, &quot;VHA HROO&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VISN/Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacancy_Appointing_Authority__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vacancy Appointing Authority</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacancy_Created_Date__c</fullName>
        <description>Date the Vacancy was created within USA Staffing.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vacancy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vacancy_Interdisciplinary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vacancy Interdisciplinary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vacancy_Mission_Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vacancy Mission Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vacancy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vacancy Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacancy_Pay_Plan_Series_Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vacancy Pay Plan-Series-Grade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacancy_Specialty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vacancy Specialty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacancy_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vacancy Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vacancy_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vacancy Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vice_Name__c</fullName>
        <formula>Position_Number__r.Incumbant_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vice Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Workflow Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>